# labadariaphoto

./: CMakeLists.txt  Makefile  README.md
src/: bmp.c  bmp.h  cli.c  cli.h  filters.c  filters.h  image.c  image.h  main.c  pipeline.c  pipeline.h
